...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/NomUtilisateur"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@drawable/border"
            android:hint="Nom d'utilisateur"
            android:paddingLeft="3pt"
            android:paddingTop="1pt"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/MotDePasse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Logo" />

        <Button
            android:id="@+id/BtnConnexion"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="Se Connecter"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:backgroundTint="#EF3C56"
            app:layout_constraintBottom_toTopOf="@+id/CreerCompte"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MotDePasse" />

        <TextView
            android:id="@+id/CreerCompte"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:text="Créer un compte"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
...
