...
            android:background="#47E2D0"
            android:padding="15dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout11"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/NomUtilisateurAccueil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom du joueur"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
...
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/TxtPointage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pointage"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
...
